--- a/system/app/Widgets/Quote/views/disclaimer.quote.phtml
+++ b/system/app/Widgets/Quote/views/disclaimer.quote.phtml
@@ -1,5 +1,7 @@
 <?php if($this->editAllowed): ?>
     <textarea class="quote-disclaimer-text"><?php echo $this->disclaimer; ?></textarea>
 <?php else: ?>
-    <span class="quote-disclaimer-text"><?php echo $this->disclaimer; ?></span>
+    <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
+        <span class="quote-disclaimer-text"><?php echo $this->disclaimer; ?></span>
+    <?php endif; ?>
 <?php endif; ?>
