--- a/system/app/Widgets/Quote/views/price.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/price.quote.item.phtml
@@ -1,1 +1,1 @@
-<span class="price-<?php echo ($this->unitPrice) ? 'unit' : 'total'; ?>"><?php echo $this->currency($this->content); ?></span>
+<span class="price-<?php echo (($this->unitPrice) ? 'unit' : 'total'); ?>"><?php echo $this->currency($this->content); ?></span>
