--- a/system/app/Widgets/Quote/views/search.quote.phtml
+++ b/system/app/Widgets/Quote/views/search.quote.phtml
@@ -11,7 +11,7 @@
         },
 		minLength: 2,
 		select: function(event, ui) {
-			var billingForm = $('#billing-user-address');
+			var billingForm = $('#plugin-quote-quoteform');
 			$(':input[name]', billingForm).each(function() {
 				$(this).val(ui.item[$(this).attr('name')]);
 			});
