--- a/system/views/options.quote.phtml
+++ b/system/views/options.quote.phtml
@@ -29,6 +29,9 @@
         padding: 7px;
         width: 218px;
     }
+    .product-options-listing {
+        overflow-y:auto;
+    }
 </style>
 
 <?php
