--- a/system/views/options.quote.phtml
+++ b/system/views/options.quote.phtml
@@ -5,7 +5,7 @@
 ?>
 
 
-<div id="manage-product-options-main" class="grid_12 h310"></div>
+<div id="manage-product-options-main" class="grid_12 h490"></div>
 <div class="grid_12" style="text-align: right;padding: 5px 0;">
     <a data-qid="<?php echo $this->quoteId; ?>" href="javascript:;" id="save-options"><?php echo $this->translate('Save options'); ?></a>
 </div>
@@ -13,13 +13,14 @@
     .product-item {overflow: hidden;position: relative;}
     .product-data img {
         max-height: 231px;
+        max-width: 215px;
     }
     #product-name {
         position: absolute;
         background: rgba(0, 0, 0, 0.7);
         padding: 7px;
         color: white;
-        width: 218px;
+        width: 201px;
         text-align: center;
     }
     .product-details {
@@ -27,10 +28,18 @@
         background: rgba(0, 0, 0, 0.7);
         color: white;
         padding: 7px;
-        width: 218px;
+        width: 201px;
     }
     .product-options-listing {
         overflow-y:auto;
+    }
+    .product-options-listing p {
+        font-size: 0.9em;
+    }
+    fieldset.option {
+        float:left;
+        width: 322px;
+        margin-right: 5px;
     }
 </style>
 
