--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -1,6 +1,9 @@
 <?php if(!empty($this->options)): ?>
-
-	<?php foreach($this->options as $title => $optData): ?>
+	<?php
+        $currOpts = array();
+        foreach($this->options as $title => $optData) {
+            $currOpts[$optData['option_id']] = $optData['id'];
+    ?>
 	    <p>
             <span class="option-title"><?php echo $title; ?>: </span>
 		    <?php echo $optData['title']; ?>
@@ -11,11 +14,11 @@
                 <?php echo '(', $optData['weightSign'], $optData['weightValue'], ' ', $this->weightSign, ')'; ?>
             <?php endif; ?>
 	    </p>
-	<?php endforeach; ?>
+	<?php }; ?>
 
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
-	<a href="javascript:;" data-pheight="574" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/co/<?php echo $this->options[0]['id'];?>/qid/<?php echo $this->quoteId; ?>/pid/<?php echo $this->productId;?>">
+	<a href="javascript:;" data-pheight="574" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/co/<?php echo http_build_query($currOpts);?>/qid/<?php echo $this->quoteId; ?>/pid/<?php echo $this->productId;?>">
 		<strong><?php echo $this->translate('Manage options'); ?></strong>
 	</a>
 <?php endif; ?>
