--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -4,7 +4,10 @@
 </style>
 <script type="text/javascript">
     $(function() {
-        $('#state').empty().parent('div').hide();
+        console.log($('#state option').length);
+        if(!$('#state option').length) {
+            $('#state').empty().parent('div').hide();
+        }
 
         $(document).on('submit', '#plugin-quote-quoteform', function(e) {
             e.preventDefault();
@@ -15,7 +18,7 @@
             }).css({borderColor: "indianred"});
 
             if(notValidElements.length) {
-                showMessage('<?php echo $this->translate('Required fields are missing! We need to have, at least, your name and e-mail to generate a quote.'); ?>', true);
+                showMessage('<?php echo $this->translate('Required fields are missing! Please fill all fields marked with *'); ?>', true);
                 return false;
             }
 
