--- a/system/app/Widgets/Quote/views/address.quote.phtml
+++ b/system/app/Widgets/Quote/views/address.quote.phtml
@@ -30,6 +30,7 @@
             <p>
                 <a href="mailto:<?php echo $this->address['email'];?>"><?php echo $this->address['email'];?></a>
             </p>
+            <p><?php echo $this->address['phone'];?></p>
         </div>
 	<?php endif; ?>
 <?php endif; ?>
