--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -6,17 +6,17 @@
     <td><%= $.datepicker.formatDate('dd-M-yy', new Date(Date.parse(createdAt.replace(/\-/g, '/')))) %></td>
     <td>
         <select name="quoteStatus" class="quote-status" id="<%= id %>">
-            <option value="new" <% if (status == 'new') { %> selected="selected" <% } %>>New</option>
-            <option value="sent" <% if (status == 'sent') { %> selected="selected" <% } %>>Sent</option>
-            <option value="sold" <% if (status == 'sold') { %> selected="selected" <% } %>>Sold</option>
-            <option value="lost" <% if (status == 'lost') { %> selected="selected" <% } %>>Lost</option>
+            <option value="new" <% if (status == 'new') { %> selected="selected" <% } %>><?php echo $this->translate('Quote New');?></option>
+            <option value="sent" <% if (status == 'sent') { %> selected="selected" <% } %>><?php echo $this->translate('Quote Sent');?></option>
+            <option value="sold" <% if (status == 'sold') { %> selected="selected" <% } %>><?php echo $this->translate('Payment received');?></option>
+            <option value="lost" <% if (status == 'lost') { %> selected="selected" <% } %>><?php echo $this->translate('Lost opportunity');?></option>
         </select>
     </td>
-    <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html?mode=preview">Preview</a></td>
+    <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html?mode=preview"><?php echo $this->translate('Preview');?></a></td>
     <td><a href="javascript:;" class="quote-grid-delete" data-sid="<%= id %>"><img src="<%= $('#website_url').val() %>system/images/delete.png" alt="delete"/></a></td>
 </script>
 <!-- /quote grid row template -->
-
+<input type="hidden" name="system-language" value="<?php echo Tools_Misc::getJsTranslationLanguage();?>"/>
 <!-- paginator template -->
 <?php echo $this->render('quote.grid.pager.phtml'); ?>
 <!-- /paginator template -->
