added filter by creator for dashboard

--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -30,7 +30,7 @@
         <table id="quote-grid-quotes" class="widget">
             <thead>
                 <tr class="search-line">
-                    <th class="gray-bg" colspan="7"><label><?php echo $this->translate('Search');?></label><?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title'))); ?></th>
+                    <th class="gray-bg" colspan="7"><label><?php echo $this->translate('Search');?></label><?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator'))); ?></th>
                 </tr>
                 <tr>
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
