--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -18,7 +18,9 @@
 
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
-	<a href="javascript:;" data-pheight="574" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/co/<?php echo http_build_query($currOpts);?>/qid/<?php echo $this->quoteId; ?>/pid/<?php echo $this->productId;?>">
-		<strong><?php echo $this->translate('Manage options'); ?></strong>
-	</a>
+    <?php if (isset($currOpts)): ?>
+        <a href="javascript:;" data-pheight="574" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/co/<?php echo http_build_query($currOpts); ?>/qid/<?php echo $this->quoteId; ?>/pid/<?php echo $this->productId;?>">
+            <strong><?php echo $this->translate('Manage options'); ?></strong>
+        </a>
+    <?php endif; ?>
 <?php endif; ?>
