fix if option not have value

--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -10,7 +10,9 @@
             <?php if(isset($optData['selection'])): ?>
                 <span><?php echo $optData['selection']; ?></span>
             <?php else: ?>
-                <?php echo '(', $optData['priceSign'], $this->currency($optData['priceValue']), ')'; ?>
+                <?php if(is_numeric($optData['priceValue'])):?>
+                    <?php echo '(', $optData['priceSign'], $this->currency($optData['priceValue']), ')'; ?>
+                <?php endif; ?>
                 <?php echo '(', $optData['weightSign'], $optData['weightValue'], ' ', $this->weightSign, ')'; ?>
             <?php endif; ?>
 	    </p>
