--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -1,23 +1,22 @@
 <?php if(!empty($this->options)): ?>
-	<?php
-        $currOpts = array();
-        foreach($this->options as $title => $optData) {
-            $currOpts[$optData['option_id']] = $optData['id'];
-    ?>
-	    <p>
-            <span class="option-title"><?php echo $title; ?>: </span>
-		    <?php echo $optData['title']; ?>
-            <?php if(isset($optData['selection'])): ?>
-                <span><?php echo $optData['selection']; ?></span>
-            <?php else: ?>
-                <?php if(is_numeric($optData['priceValue'])):?>
-                    <?php echo '(', $optData['priceSign'], $this->currency($optData['priceValue']), ')'; ?>
-                <?php endif; ?>
-                <?php echo '(', $optData['weightSign'], $optData['weightValue'], ' ', $this->weightSign, ')'; ?>
-            <?php endif; ?>
-	    </p>
-	<?php }; ?>
-
+	<?php $currOpts = array();?>
+        <?php foreach($this->options as $title => $optData):?>
+           <?php if (is_array($optData) && !empty($optData)): ?>
+                <?php $currOpts[$optData['option_id']] = $optData['id']; ?>
+                <p>
+                    <span class="option-title"><?php echo $title; ?>: </span>
+                    <?php echo $optData['title']; ?>
+                    <?php if(isset($optData['selection'])): ?>
+                        <span><?php echo $optData['selection']; ?></span>
+                    <?php else: ?>
+                        <?php if (is_numeric($optData['priceValue'])): ?>
+                            <?php echo '(', $optData['priceSign'], $this->currency($optData['priceValue']), ')'; ?>
+                        <?php endif; ?>
+                        <?php echo '(', $optData['weightSign'], $optData['weightValue'], ' ', $this->weightSign, ')'; ?>
+                    <?php endif; ?>
+                </p>
+	        <?php endif; ?>
+        <?php endforeach; ?>
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
     <?php if (isset($currOpts)): ?>
