--- a/system/app/Widgets/Quote/views/item/price.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/price.quote.item.phtml
@@ -1,5 +1,5 @@
 <?php if($this->editAllowed && $this->unitPrice == 'unit'): ?>
-    <input data-pid="<?php echo $this->productId; ?>" data-scope="quote-item" data-type="price" class="quote-recalculate price-unit" type="text" value="<?php echo Zend_Locale_Format::toFloat($this->price, array('precision' => 2, 'locale' => new Zend_Locale($this->currency()->getCurrency()->getLocale()))); ?>" />
+    <input data-pid="<?php echo $this->productId; ?>" data-scope="quote-item" data-type="price" class="quote-recalculate price-unit" type="text" value="<?php echo round($this->price,2); ?>" />
 <?php else: ?>
     <span data-pid="<?php echo $this->productId; ?>" class="price-<?php echo (($this->unitPrice) ? 'unit' : 'total'); ?>"><?php echo $this->currency($this->price); ?></span>
 <?php endif; ?>
