--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -11,8 +11,12 @@ $(document).ready(function(){
     $(document).on("click", "#applySettings", function(e){
           e.preventDefault();
           var autoQuote = 0;
+          var disableTitlePrefix = 0;
           if($('#auto-quote').prop("checked")){
               var autoQuote = 1;
+          }
+          if($('#disable-title-prefix').prop("checked")){
+              var disableTitlePrefix = 1;
           }
 
           $.ajax({
@@ -22,18 +26,19 @@ $(document).ready(function(){
             data: {
                 autoQuote: autoQuote,
                 quoteTemplate: $('#quote-template option:selected').val(),
-                expirationDelay: $('#expiration-delay').val()
+                expirationDelay: $('#expiration-delay').val(),
+                disableTitlePrefix:disableTitlePrefix
             },
             success: function(responce){
                 smoke.signal('<?php echo $this->translate('Saved');?>');
             }
-            
+
           });
           return false;
 
-          
+
      });
-     
-     
+
+
 });
 </script>
