--- a/system/views/layout.phtml
+++ b/system/views/layout.phtml
@@ -1,5 +1,8 @@
 <?php echo $this->doctype();?>
-<html>
+<!--[if IE 7 ]><html class="ie ie7" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
+<!--[if IE 9 ]><html class="ie ie9" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
+<!--[if !(IE)]><!--> <html lang="<?php echo $this->htmlLang; ?>"> <!--<![endif]-->
     <head>
 	    <?php
 		    $this->headMeta()->setCharset('UTF-8');
@@ -7,18 +10,20 @@
                  ->appendHttpEquiv('Content-Language', $this->translate()->getLocale());
 	        echo $this->headMeta();
             echo $this->headTitle();
-	        $this->headLink()->appendStylesheet($this->websiteUrl . 'system/uithemes/seotoasterui/seotoasterui.css')
-		        ->appendStylesheet($this->websiteUrl . 'system/css/reset.css')
-		        ->appendStylesheet($this->websiteUrl . 'system/css/grid.css')
-                ->appendStylesheet($this->websiteUrl . 'system/css/seotoaster.css')
-                ->appendStylesheet($this->websiteUrl . 'system/js/external/smoke/smoke.css');
+	        $this->headLink()
+                ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster-plugins.css', 'screen', 'IE')
+                ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster-lite.css', 'screen', 'IE')
+                ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster-ui.css', 'screen', 'IE')
+                ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster.css')
+                ->prependStylesheet($this->websiteUrl . 'system/css/reset.css');
             echo $this->headLink();
 	        echo $this->headStyle();
 	        $this->jQuery()->enable();
             $this->jQuery()->uiEnable();
 			$this->jQuery()->addJavascriptFile($this->websiteUrl . 'system/js/external/smoke/smoke.min.js')
 	            ->addJavascriptFile($this->websiteUrl . 'system/js/external/jquery/plugins/cookie/jquery.cookie.js')
-			    ->addJavascriptFile($this->websiteUrl . 'system/js/internal/system.js');
+			    ->addJavascriptFile($this->websiteUrl . 'system/js/internal/system.js')
+                ->addJavascriptFile($this->websiteUrl . 'system/js/ie/ie-pack.js');
 	        echo $this->jQuery();
             $this->headScript()->setAllowArbitraryAttributes(true);
 	        echo $this->headScript();
@@ -30,10 +35,12 @@
 	        <a href="http://www.seotoaster.com/">seotoaster.com</a>
         </noscript>
         <?php echo $this->formHidden('website_url', $this->websiteUrl);?>
-        <div class="seotoaster container_12 rounded3px <?php echo $this->placeholder('extraClasses'); ?>" id="<?php echo $this->placeholder('containerId'); ?>">
-            <div class="ui-widget-header ui-corner-top" style="height: 22px; padding: 7px 0 2px 8px;">
+        <div class="seotoaster container <?php echo $this->placeholder('extraClasses'); ?>" id="<?php echo $this->placeholder('containerId'); ?>">
+            <div class="header">
+                <div class="closebutton">
+                    <a class="close icon-close btn link icon inverse-error" href="javascript:;" title="<?php echo $this->translate('Close'); ?>"><?php echo $this->translate('Close');?></a>
+                </div>
                 <?php echo $this->placeholder('headerContent'); ?>
-                <div class="closebutton"><span class="close"><?php echo $this->translate('Close'); ?></span></div>
             </div>
             <?php echo $this->layout()->content; ?>
         </div>
