--- a/system/views/layout.phtml
+++ b/system/views/layout.phtml
@@ -38,7 +38,7 @@
         <div class="seotoaster container <?php echo $this->placeholder('extraClasses'); ?>" id="<?php echo $this->placeholder('containerId'); ?>">
             <div class="header">
                 <div class="closebutton">
-                    <a class="close icon-close btn link icon inverse-error" href="javascript:;" title="<?php echo $this->translate('Close'); ?>"><?php echo $this->translate('Close');?></a>
+                    <a class="close icon-close btn link icon inverse-error" href="javascript:;" title="<?php echo $this->translate('Close'); ?>"></a>
                 </div>
                 <?php echo $this->placeholder('headerContent'); ?>
             </div>
