--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -11,12 +11,9 @@ $(document).ready(function(){
     $(document).on("click", "#applySettings", function(e){
           e.preventDefault();
           var autoQuote = 0;
-          var disableTitlePrefix = 0;
+
           if($('#auto-quote').prop("checked")){
               var autoQuote = 1;
-          }
-          if($('#disable-title-prefix').prop("checked")){
-              var disableTitlePrefix = 1;
           }
 
           $.ajax({
@@ -26,8 +23,7 @@ $(document).ready(function(){
             data: {
                 autoQuote: autoQuote,
                 quoteTemplate: $('#quote-template option:selected').val(),
-                expirationDelay: $('#expiration-delay').val(),
-                disableTitlePrefix:disableTitlePrefix
+                expirationDelay: $('#expiration-delay').val()
             },
             success: function(responce){
                 smoke.signal('<?php echo $this->translate('Saved');?>');
