--- a/system/app/Widgets/Quote/views/search.quote.phtml
+++ b/system/app/Widgets/Quote/views/search.quote.phtml
@@ -1,6 +1,6 @@
 <?php echo $this->formText('quoteSearch', '', array(
 	'id'          => 'quote-search',
-	'placeholder' => $this->translate('Start typing id, name or e-mail to search among addresses'),
+	'placeholder' => $this->translate('Start typing name or e-mail to search among addresses'),
 	'class'       => 'quote-address-search'
 )); ?>
 <script type="text/javascript">
